<resources>
    <string name="app_name">Marine World!</string>

    <string name="logo">logo</string>
    <string name="choose_your_difficulty">CHOOSE YOUR DIFFICULTY</string>
    <string name="choose_your_game">CHOOSE YOUR GAME!</string>
    <string name="small_fish_points">10 pts</string>
    <string name="big_fish_points">30 pts</string>
    <string name="shark_loss_point">-1 heart</string>
    <string name="start_button_text">start</string>
    <string name="game_instruction">Feed the Fish</string>
    <string name="game_over_title">GAME OVER</string>
    <string name="final_score">300</string>
    <string name="high_score">High Score : 300</string>
    <string name="try_again">try again</string>
    <string name="game_menu">game menu</string>
    <string name="main_menu">main menu</string>
    <string name="tap_to_start">Tap to start!</string>

</resources>