<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartHard1Activity">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/foody_fish_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/foody_fish_background"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_instruction"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:textSize="32sp"
        android:id="@+id/text"/>

    <TableLayout
        android:id="@+id/table_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text"
        android:layout_marginTop="90dp"
        android:layout_centerHorizontal="true">

        <TableRow>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/small_fish1"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:text="@string/small_fish_points"
                android:textColor="#212121"
                android:textSize="18sp"
                tools:ignore="RtlHardcoded,RtlSymmetry" />
        </TableRow>

        <TableRow
            android:layout_marginTop="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/big_fish2"
                tools:ignore="ContentDescription,ImageContrastCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:text="@string/big_fish_points"
                android:textColor="#212121"
                android:textSize="18sp"
                tools:ignore="RtlHardcoded,RtlSymmetry" />
        </TableRow>

        <TableRow
            android:layout_marginTop="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/shark2"
                tools:ignore="ContentDescription,ImageContrastCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:text="@string/shark_loss_point"
                android:textColor="#212121"
                android:textSize="18sp"
                tools:ignore="RtlHardcoded,RtlSymmetry" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/start_button_hard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_button_text"
        android:layout_marginTop="60dp"
        android:layout_below="@+id/table_layout"
        android:layout_centerHorizontal="true"
        />

</RelativeLayout>